--- a/test.ipynb
+++ b/test.ipynb
@@ -286,7 +286,7 @@
     {
      "data": {
       "text/plain": [
-       "[]"
+       "<dynamic_array.dynamic_array at 0x7485485f5d90>"
       ]
      },
      "execution_count": 3,
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -322,13 +322,13 @@
        "[0, 1, 2, 3, 4, 5, 6, 7, 8]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "arr"
+    "arr.to_list()"
    ]
   },
   {
@@ -432,7 +432,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": []
+      "text/plain": [
+       "<linked_list.LinkedList at 0x7485485f7a10>"
+      ]
      },
      "execution_count": 8,
      "metadata": {},
@@ -465,7 +467,7 @@
     {
      "data": {
       "text/plain": [
-       "0 -> 1 -> 2 -> 3 -> 4 -> 5 -> 6 -> 7 -> 8"
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8]"
       ]
      },
      "execution_count": 10,
@@ -474,7 +476,28 @@
     }
    ],
    "source": [
-    "arr"
+    "arr.to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[100, 0, 1, 2, 3, 4, 5, 6, 7, 8]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr.insert(idx=0, val=100)\n",
+    "arr.to_list()"
    ]
   },
   {
@@ -485,7 +508,7 @@
     {
      "data": {
       "text/plain": [
-       "100 -> 0 -> 1 -> 2 -> 3 -> 4 -> 5 -> 6 -> 7 -> 8"
+       "[100, 0, 1, 2, 3, 4, 5, 7, 8]"
       ]
      },
      "execution_count": 12,
@@ -494,34 +517,13 @@
     }
    ],
    "source": [
-    "arr.insert(idx=0, val=100)\n",
-    "arr"
+    "arr.pop(idx=7)\n",
+    "arr.to_list()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "100 -> 0 -> 1 -> 2 -> 3 -> 4 -> 5 -> 7 -> 8"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "arr.pop(idx=7)\n",
-    "arr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -813,6 +815,467 @@
     "d2.remove_rear()\n",
     "\n",
     "d2.to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f():\n",
+    "    raise ValueError\n",
+    "\n",
+    "def g():\n",
+    "    f()\n",
+    "    return 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mg\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[3], line 5\u001b[0m, in \u001b[0;36mg\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mg\u001b[39m():\n\u001b[0;32m----> 5\u001b[0m     \u001b[43mf\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;241m1\u001b[39m\n",
+      "Cell \u001b[0;32mIn[3], line 2\u001b[0m, in \u001b[0;36mf\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mf\u001b[39m():\n\u001b[0;32m----> 2\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m\n",
+      "\u001b[0;31mValueError\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "g()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from hash_map import HashMapOpenAddressing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h1 = HashMapOpenAddressing()\n",
+    "for i in range(20):\n",
+    "    h1[i] = str(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h1.remove(key=10)\n",
+    "h1[0] = 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 11, 12, 13, 14, 15, 16, 17, 18, 19]\n",
+      "[100, '1', '2', '3', '4', '5', '6', '7', '8', '9', '11', '12', '13', '14', '15', '16', '17', '18', '19']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(h1.keys())\n",
+    "print(h1.values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h1.index(19)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h1._bucket[10]._key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<hash_map.Pair at 0x74e84c6e97c0>,\n",
+       " <hash_map.Pair at 0x74e84c6e9760>,\n",
+       " <hash_map.Pair at 0x74e84c6e9970>,\n",
+       " <hash_map.Pair at 0x74e84c6e99d0>,\n",
+       " <hash_map.Pair at 0x74e84c6e9a30>,\n",
+       " <hash_map.Pair at 0x74e84c6e9a90>,\n",
+       " <hash_map.Pair at 0x74e84c6e9af0>,\n",
+       " <hash_map.Pair at 0x74e84c6e9b50>,\n",
+       " <hash_map.Pair at 0x74e84c6e9bb0>,\n",
+       " <hash_map.Pair at 0x74e84c6e9c10>,\n",
+       " <hash_map.Pair at 0x74e84c6e9700>,\n",
+       " <hash_map.Pair at 0x74e84c6e9cd0>,\n",
+       " <hash_map.Pair at 0x74e84c6e9d30>,\n",
+       " <hash_map.Pair at 0x74e84c6e9d90>,\n",
+       " <hash_map.Pair at 0x74e84c6e9e20>,\n",
+       " <hash_map.Pair at 0x74e84c6ea7b0>,\n",
+       " <hash_map.Pair at 0x74e84c6ea6f0>,\n",
+       " <hash_map.Pair at 0x74e84c6ea720>,\n",
+       " <hash_map.Pair at 0x74e84c6e91c0>,\n",
+       " <hash_map.Pair at 0x74e84c6e9eb0>,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h1._bucket"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h1._capacity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(h1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del h1[19]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 11, 12, 13, 14, 15, 16, 17, 18]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h1.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[100,\n",
+       " '1',\n",
+       " '2',\n",
+       " '3',\n",
+       " '4',\n",
+       " '5',\n",
+       " '6',\n",
+       " '7',\n",
+       " '8',\n",
+       " '9',\n",
+       " '11',\n",
+       " '12',\n",
+       " '13',\n",
+       " '14',\n",
+       " '15',\n",
+       " '16',\n",
+       " '17',\n",
+       " '18']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h1.values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "20 in h1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "19 in h1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "18 in h1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from hash_map import HashMapChaining"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h2 = HashMapChaining()\n",
+    "h2[1] = 'a'\n",
+    "h2[14] = 'b'\n",
+    "h2[27] = 'c'\n",
+    "del h2[14]\n",
+    "h2[27] = 'C'\n",
+    "h2[27]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = h2._bucket[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a._key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.next._key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 27]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h2.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a', 'C']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h2.values()"
    ]
   }
  ],
