--- a/test.ipynb
+++ b/test.ipynb
@@ -2150,6 +2150,280 @@
     "g.remove_edge(from_vertex=3, to_vertex=3)\n",
     "g.edges_num"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from HashMap import HashMapChaining"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'15'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h = HashMapChaining()\n",
+    "for i in range(150):\n",
+    "    h.put(key=i, val=str(i))\n",
+    "h[15]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h._capacity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "150"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h._size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "78\n",
+      "52\n",
+      "26\n",
+      "0\n",
+      "104\n",
+      "130\n",
+      "79\n",
+      "53\n",
+      "27\n",
+      "1\n",
+      "105\n",
+      "131\n",
+      "80\n",
+      "54\n",
+      "28\n",
+      "2\n",
+      "106\n",
+      "132\n",
+      "81\n",
+      "55\n",
+      "29\n",
+      "3\n",
+      "107\n",
+      "133\n",
+      "82\n",
+      "56\n",
+      "30\n",
+      "4\n",
+      "108\n",
+      "134\n",
+      "83\n",
+      "57\n",
+      "31\n",
+      "5\n",
+      "109\n",
+      "135\n",
+      "84\n",
+      "58\n",
+      "32\n",
+      "6\n",
+      "110\n",
+      "136\n",
+      "85\n",
+      "59\n",
+      "33\n",
+      "7\n",
+      "111\n",
+      "137\n",
+      "86\n",
+      "60\n",
+      "34\n",
+      "8\n",
+      "112\n",
+      "138\n",
+      "87\n",
+      "61\n",
+      "35\n",
+      "9\n",
+      "113\n",
+      "139\n",
+      "88\n",
+      "62\n",
+      "36\n",
+      "10\n",
+      "114\n",
+      "140\n",
+      "89\n",
+      "63\n",
+      "37\n",
+      "11\n",
+      "115\n",
+      "141\n",
+      "90\n",
+      "64\n",
+      "38\n",
+      "12\n",
+      "116\n",
+      "142\n",
+      "91\n",
+      "65\n",
+      "39\n",
+      "13\n",
+      "117\n",
+      "143\n",
+      "92\n",
+      "66\n",
+      "40\n",
+      "14\n",
+      "118\n",
+      "144\n",
+      "93\n",
+      "67\n",
+      "41\n",
+      "15\n",
+      "119\n",
+      "145\n",
+      "94\n",
+      "68\n",
+      "42\n",
+      "16\n",
+      "120\n",
+      "146\n",
+      "95\n",
+      "69\n",
+      "43\n",
+      "17\n",
+      "121\n",
+      "147\n",
+      "96\n",
+      "70\n",
+      "44\n",
+      "18\n",
+      "122\n",
+      "148\n",
+      "97\n",
+      "71\n",
+      "45\n",
+      "19\n",
+      "123\n",
+      "149\n",
+      "98\n",
+      "72\n",
+      "46\n",
+      "20\n",
+      "124\n",
+      "99\n",
+      "73\n",
+      "47\n",
+      "21\n",
+      "125\n",
+      "100\n",
+      "74\n",
+      "48\n",
+      "22\n",
+      "126\n",
+      "101\n",
+      "75\n",
+      "49\n",
+      "23\n",
+      "127\n",
+      "102\n",
+      "76\n",
+      "50\n",
+      "24\n",
+      "128\n",
+      "103\n",
+      "77\n",
+      "51\n",
+      "25\n",
+      "129\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in h:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def strStr(self, haystack: str, needle: str) -> int:\n",
+    "        for i in range(len(needle)):\n",
+    "            for j in range(len(haystack)):\n",
+    "                if needle[i] == haystack[j]:\n",
+    "                    return i\n",
+    "        return -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Solution().strStr(haystack='leetcode', needle='leeto')"
+   ]
   }
  ],
  "metadata": {
