新增搜索和排序

--- a/test.ipynb
+++ b/test.ipynb
@@ -2424,6 +2424,138 @@
    "source": [
     "Solution().strStr(haystack='leetcode', needle='leeto')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from SkipList import SkipList"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "键1对应的塔高为1\n",
+      "键2对应的塔高为2\n",
+      "键3对应的塔高为1\n",
+      "键4对应的塔高为1\n",
+      "键5对应的塔高为1\n",
+      "键6对应的塔高为4\n",
+      "键7对应的塔高为1\n",
+      "键8对应的塔高为2\n",
+      "键9对应的塔高为1\n",
+      "键100对应的塔高为2\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = SkipList()\n",
+    "for i in range(10):\n",
+    "    s.put(key=i, val=str(i))\n",
+    "s.put(key=100, val='1000')\n",
+    "s[100] = '100'\n",
+    "del s[0]\n",
+    "for i in s.keys():\n",
+    "    print(f'键{i}对应的塔高为{s.height(key=i)}')\n",
+    "print(len(s))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s._head._down._down._next._next._next._keyb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1', '2', '3', '4', '5', '6', '7', '8', '9', '100']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name '__file__' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mstr\u001b[39m(Path(\u001b[38;5;18;43m__file__\u001b[39;49m))\n",
+      "\u001b[0;31mNameError\u001b[0m: name '__file__' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "str(Path(__file__))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aaaaa\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input()\n",
+    "print(a)"
+   ]
   }
  ],
  "metadata": {
