--- a/test.ipynb
+++ b/test.ipynb
@@ -2556,6 +2556,125 @@
     "a = input()\n",
     "print(a)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[101]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr = [1]\n",
+    "def f(arr: list[int]):\n",
+    "    arr = arr.copy()\n",
+    "    for i in range(len(arr)):\n",
+    "        arr[i] += 100\n",
+    "    return arr\n",
+    "\n",
+    "f(arr=arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 121, 31, 92, 132, 145, 96, 158, 49, 99, 169]\n",
+      "[0, 121, 31, 132, 145, 49, 158, 169, 92, 96, 99]\n",
+      "[0, 31, 49, 92, 96, 99, 121, 132, 145, 158, 169]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = [49, 99, 92, 121, 31, 96, 132, 145, 169, 0, 158]\n",
+    "d = 10\n",
+    "n: int = len(arr)\n",
+    "def digit(num: int, k: int) -> int:\n",
+    "    '''获取 d 进制数字 num 从右至左的第 k 位'''\n",
+    "    return (num // d**(k-1)) % d\n",
+    "def counter_sort_digit(arr: list[int], k: int) -> list[int]:\n",
+    "    '''\n",
+    "    计数排序（根据数组每个元素从右至左第 k 位进行排序）\n",
+    "    如果第 k 位相等，则元素的相对位置不变（由第 k-1 位决定）\n",
+    "    '''\n",
+    "    counter: list[int] = [0] * d # d 进制的范围是0~d-1，因此需要容量为 d 的计数数组\n",
+    "    '''统计 d 进制中各个数字出现的次数'''\n",
+    "    for num in arr:\n",
+    "        x: int = digit(num=num, k=k)\n",
+    "        counter[x] += 1\n",
+    "    '''求 counter 的前缀和，将“出现次数”转换为“尾索引”'''\n",
+    "    for i in range(d - 1):\n",
+    "        counter[i + 1] += counter[i]\n",
+    "    result = [None] * n\n",
+    "    for i in range(n - 1, -1, -1):\n",
+    "        num = arr[i]\n",
+    "        x: int = digit(num=num, k=k)\n",
+    "        result[counter[x] - 1] = num # 将 num 放置到对应索引处\n",
+    "        counter[x] -= 1 # 令前缀和自减 1，得到下次放置 num 的索引\n",
+    "    return result\n",
+    "\n",
+    "result = counter_sort_digit(arr=arr, k=1)\n",
+    "print(result)\n",
+    "result = counter_sort_digit(arr=result, k=2)\n",
+    "print(result)\n",
+    "result = counter_sort_digit(arr=result, k=3)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[169, 158, 145, 132, 121, 99, 96, 92, 49, 31, 0]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr.sort(reverse=not False)\n",
+    "arr"
+   ]
   }
  ],
  "metadata": {
